// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitAppWizardModal should match snapshot when visible = true 1`] = `
<SubmitAppWizard
  onClose={[MockFunction]}
  visible={true}
/>
`;

exports[`SubmitAppWizardModal should match snapshot when visible = true 2`] = `
<SubmitAppWizard
  onClose={[MockFunction]}
  visible={false}
/>
`;
